	Fixed bug where the selection would be at the wrong location sometimes for inline editor instances.
	Fixed bug where drag/dropping content into an inline editor would fail on WebKit/Blink.
	Fixed bug where table grid wouldn't work properly when the UI was rendered in for RTL mode.
	Fixed bug where range normalization wouldn't handle mixed contentEditable nodes properly.
	Fixed so old language packs get properly loaded when the new longer language code format is used.
	Fixed so all track changes junk such as comments, deletes etc gets removed when pasting from Word.
	Fixed so non image data urls is blocked by default since they might contain scripts.
	Fixed so it's possible to import styles from the current page stylesheets into an inline editor by using the importcss_file_filter.
Version 4.0.21 (2014-04-01)
	Added new getCssText method to formatter to get the preview css text value for a format to be used in UI.
	Added new table_grid option that allows you to disable the table grid and use a dialog.
	Added new image_description, image_dimensions options to image plugin. Patch contributed by Pat O'Neill.
	Added new media_alt_source, media_poster, media_dimensions options to media plugin. Patch contributed by Pat O'Neill.
	Added new ability to specify high/low dpi versions custom button images for retina displays.
	Added new getWindows method to WindowManager makes it easier to control the currently opened windows.
	Added new paste_webkit_styles option to paste plugin to control the styles that gets retained on WebKit.
	Added preview of classes for the selectboxes used by the link_class_list/image_class_list options.
	Added support for Sauce Labs browser testing using the new saucelabs-tests build target.
	Added title input field to link dialog for a11y reasons can be disabled by using the link_title option.
	Fixed so the toolbar option handles an array as input for multiple toolbar rows.